Revision history for CPAN-Mini

{{$NEXT}}

1.111002  2011-04-16 18:20:43 Europe/Amsterdam

          test for online-ness by HEAD-ing 02packages, not the remote root

1.111001  2011-02-10 19:34:38 America/New_York
          restore six-digit-mantissa versioning to help downstream packagers

1.111     2011-02-05 15:13:17 America/New_York
          add --timeout (thanks, Gabor Szabo!)

1.110     2011-01-27 21:48:34 America/New_York
          if the config file does not exist, do not die or spew warnings; this
          fixes RT #57388

1.100630  2010-03-04 07:57:34 America/New_York
          suppress "using config..." during setup with -qq

1.100593  2010-02-28 16:58:34 America/New_York
          fix a previously unreached bit of code re: basename

1.100592  2010-02-28 15:15:36 America/New_York
          fix insanely stupid typo; need more tests!

1.100591  2010-02-28 15:11:03 America/New_York
          add an option to skip source code control files (thanks, brian d foy)

1.100590  2009-02-28
          add -C switch to allow alternate config file (thanks, brian d foy)
          getopt switches are now correctly case-sensitive (thanks, brian)
          improve subclassability for config file and output (thanks, brian)
          switch to Dist::Zilla for release management

0.576     2009-01-16
          add repo to metadata

0.575     2009-01-12
          add no_conn_cache argument

0.574     2008-11-26
          fix broken prereq declaration in Makefile.PL

0.573     2008-11-25
          switch to new File::Path API, do not suffer undef dirmodes
          write a RECENT file of the files mirrored in the latest run

0.572     2008-11-04
          add 'use File::HomeDir' to CPAN/Mini.pm (thanks DAGOLDEN)
          improve handling of trailing whitespace in config (thanks ANK)

0.571     2008-05-23
          set LWP::UserAgent's env_proxy option to use proxy (RT #36124 from
          IFOMICHEV)

          allow skip_cleanup in config

0.570     2008-05-01